--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>Yiting Xia</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>Try my best to be a scientist as well as an artist.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
