--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    Yiting Xia - Portfolio
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -162,7 +162,7 @@
       </div>
     </section>
 
-    <!-- ***** Work ***** -->
+    <!-- ***** Music ***** -->
 
     <section class="music" id="work">
       <div class="row">
