--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     <section class="music" id="work">
       <div class="row">
-        <h2>My Work</h2>
+        <h2>Music</h2>
         <div class="work__boxes">
           
           <!-- Each div with the work__box class is a project. -->
