--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     <!-- ***** Music ***** -->
 
-    <section class="music" id="work">
+    <section class="music" id="Music">
       <div class="row">
         <h2>Music</h2>
         <div class="work__boxes">
