--- a/index.html
+++ b/index.html
@@ -78,19 +78,18 @@
           <!-- Project1 -->
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>Automatic Chronological Classification of Beethoven’s Piano Sonatas</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                This is a brief introduction of my work “Chronological Classification of Beethoven’s Piano Sonatas Using Deep Learning Networks”.
               </p>
               <ul class="work__list">
-                <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>Music Classification</li>
+                <li>Natural Language Processing</li>
+                <li>Deep Learning</li>
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
+                <a href="https://yitingxia.medium.com/automatic-chronological-classification-of-beethovens-piano-sonatas-d544c1f1c980" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
@@ -99,7 +98,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="./images/AC_Pic.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
