--- a/index.html
+++ b/index.html
@@ -80,21 +80,12 @@
             <div class="work__text">
               <h3>Automatic Chronological Classification of Beethoven’s Piano Sonatas</h3>
               <p>
-                This is a brief introduction of my work “Chronological Classification of Beethoven’s Piano Sonatas Using Deep Learning Networks”.
+                A brief introduction of my work “Chronological Classification of Beethoven’s Piano Sonatas Using Deep Learning Networks”.
               </p>
-              <ul class="work__list">
-                <li>Music Classification</li>
-                <li>Natural Language Processing</li>
-                <li>Deep Learning</li>
-              </ul>
 
               <div class="work__links">
                 <a href="https://yitingxia.medium.com/automatic-chronological-classification-of-beethovens-piano-sonatas-d544c1f1c980" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
-                </a>
               </div>
             </div>
             <div class="work__image-box">
