--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
               <div class="work__links">
                 <a href="https://yitingxia.medium.com/automatic-chronological-classification-of-beethovens-piano-sonatas-d544c1f1c980" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
+                </a>
+                <!--<a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
+                  <img src="./images/github.svg" class="work__code" alt="GitHub"> -->
+                </a>
               </div>
             </div>
             <div class="work__image-box">
