--- a/index.html
+++ b/index.html
@@ -156,10 +156,9 @@
           <!-- Project4 -->
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>A Midwinter Daydream</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                A mixture of sound and music.
               </p>
               <ul class="work__list">
                 <li>React</li>
@@ -169,16 +168,16 @@
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://yitingxia.medium.com/a-midwinter-daydream-92724846f46f" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                <!-- <a href="#">
+                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub"> -->
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+              <img src="./images/Daydream.png" class="work__image" alt="Project 4" />
             </div>
           </div>
 
