--- a/index.html
+++ b/index.html
@@ -159,13 +159,8 @@
               <h3>A Midwinter Daydream</h3>
               <p>
                 A mixture of sound and music.
+                A girl fell asleep at noon on a winter day, under the noise of air conditioning. Where would she go in her dream? 
               </p>
-              <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
-              </ul>
 
               <div class="work__links">
                 <a href="https://yitingxia.medium.com/a-midwinter-daydream-92724846f46f" target="_blank" class="link__text">
