--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <nav class="nav" role="navigation">
         <ul class="nav__items">
           <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
+          <!--<li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>-->
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
           </li>
@@ -59,7 +59,7 @@
           <span>Yiting Xia</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>Try my best to be a scientist as well as an artist.</p>
+        <p>Try my best to be a scientist and an artist.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -80,7 +80,7 @@
             <div class="work__text">
               <h3>Automatic Chronological Classification of Beethoven’s Piano Sonatas</h3>
               <p>
-                A brief introduction of my work “Chronological Classification of Beethoven’s Piano Sonatas Using Deep Learning Networks”.
+                <!--A brief introduction of my work “Chronological Classification of Beethoven’s Piano Sonatas Using Deep Learning Networks”.-->
               </p>
 
               <div class="work__links">
@@ -205,13 +205,13 @@
     
 
   
-    <!-- ***** Clients ***** -->
+    <!-- ***** Clients ***** 
 
     <section class="client" id="clients">
       <div class="row">
         <h2>Clients</h2>
         <div class="client__logos">
-          <!-- Add logos of the clients or companies you'have worked with. -->
+          <!-- Add logos of the clients or companies you'have worked with. 
           <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
           <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
           <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
@@ -220,7 +220,7 @@
           <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
         </div>
       </div>
-    </section>
+    </section>-->
 
     <!-- ***** About ***** -->
 
