--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
     
 
   
-    <!-- ***** Clients ***** 
+    <!-- ***** Clients ***** -->
 
     <section class="client" id="clients">
       <div class="row">
         <h2>Clients</h2>
         <div class="client__logos">
-          <!-- Add logos of the clients or companies you'have worked with. 
+          <!-- Add logos of the clients or companies you'have worked with.--> 
           <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
           <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
           <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
@@ -220,7 +220,7 @@
           <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
         </div>
       </div>
-    </section>-->
+    </section>
 
     <!-- ***** About ***** -->
 
