--- a/index.html
+++ b/index.html
@@ -228,18 +228,16 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
+              I am passionate in analysing and composing music in both scientific and artistic ways, and I would like to do research in the intersection
+              between music and technology. I hope my work can truly help music composition, production and appreciation technologically in the near future.
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <!--<a href="#" class="btn">My Resume</a> -->
           </div>
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo" src="./images/meme.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -253,15 +251,11 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          Are you looking for a fast-performing and user-friendly website to
-          represent your product or business? or looking for any kind of
-          consultation? or want to ask questions? or have some advice for me
-          or just want to say "Hi 👋" in any case feel free to Let me know. I
-          will do my best to respond back. 😊 The quickest way to reach out to
-          me is via an email.
+          If you are interested in my projects, please feel free to contact me via email!
+          Any questions or suggestions are always welcomed. 😊 
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <a href="yitingxiaxyt@gmail.com" class="btn">you@example.com</a>
       </div>
     </div>
   </section>
