--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          If you are interested in my projects, please feel free to contact me via email!
+          If you are interested in my projects, please feel free to contact me via email! <br>
           Any questions or suggestions are always welcomed. 😊 
         </p>
         <!-- Replace the email with yours -->
-        <a href="yitingxiaxyt@gmail.com" class="btn">you@example.com</a>
+        <a href="yitingxiaxyt@gmail.com" class="btn">yitingxiaxyt@gmail.com</a>
       </div>
     </div>
   </section>
