--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
-          <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+          <li class="nav__item"><a href="#work" class="nav__link">Projects</a></li>
           <!--<li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>-->
           <li class="nav__item">
-            <a href="#about" class="nav__link">About</a>
+            <a href="#about" class="nav__link">About Me</a>
           </li>
           <li class="nav__item">
             <a href="#contact" class="nav__link">Contact</a>
@@ -71,7 +71,7 @@
 
     <section class="work" id="work">
       <div class="row">
-        <h2>My Work</h2>
+        <h2>My Projects</h2>
         <div class="work__boxes">
 
           <!-- Each div with the work__box class is a project. -->
@@ -80,7 +80,7 @@
             <div class="work__text">
               <h3>Automatic Chronological Classification of Beethoven’s Piano Sonatas</h3>
               <p>
-                <!--A brief introduction of my work “Chronological Classification of Beethoven’s Piano Sonatas Using Deep Learning Networks”.-->
+                Some interesting results in automatic music classification.
               </p>
 
               <div class="work__links">
@@ -130,7 +130,7 @@
             <div class="work__text">
               <h3>Adventure</h3>
               <p>
-                Live coding with Sonic Pi.
+                Live coding with Sonic Pi. <br>
                 Sonic Pi is a live coding environment in Ruby. It is intriguing to combine codes and music. 
               </p>
 
@@ -153,7 +153,7 @@
             <div class="work__text">
               <h3>A Midwinter Daydream</h3>
               <p>
-                A mixture of sound and music.
+                A mixture of sound and music. <br>
                 A girl fell asleep at noon on a winter day, under the noise of air conditioning. Where would she go in her dream? 
               </p>
 
@@ -187,8 +187,8 @@
                 <a href="#" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                <!--<a href="#">
+                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub"> -->
                 </a>
               </div>
             </div>
@@ -237,7 +237,7 @@
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/meme.jpg" alt="" />
+            <img class="about__photo" src="./images/Me.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -252,7 +252,7 @@
       <div class="contact__info">
         <p>
           If you are interested in my projects, please feel free to contact me via email! <br>
-          Any questions or suggestions are always welcomed. 😊 
+          Any questions or suggestions are warmly welcomed. 😊 
         </p>
         <!-- Replace the email with yours -->
         <a href="yitingxiaxyt@gmail.com" class="btn">yitingxiaxyt@gmail.com</a>
@@ -261,10 +261,11 @@
   </section>
 
   <!-- ***** Footer ***** -->
-
+  <!--
   <footer role="contentinfo" class="footer">
     <div class="row">
       <!-- Update the links to point to your accounts -->
+<!--
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
           <a href="https://twitter.com/nisarhassan12/" title="Link to Twitter Profile">
@@ -286,9 +287,10 @@
             <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
-      </ul>
+      </ul> -->
 
       <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
+<!--
       <p>
         &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
       </p>
@@ -299,7 +301,7 @@
         </iframe>
       </div>
     </div>
-  </footer>
+  </footer>. -->
 
   <a href="#top" class="back-to-top" title="Back to Top">
     <img src="./images/arrow-up.svg" alt="Back to Top" class="back-to-top__image"/>
