--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              I am passionate in analysing and composing music in both scientific and artistic ways, and I would like to do research in the intersection
+              I am passionate in analysing and composing music in both computational and artistic ways, and I would like to do research in the intersection
               between music and technology. I hope my work can truly help music composition, production and appreciation technologically in the near future.
             </p>
             <!-- Provide a link to your resume -->
