--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
           <!-- Project2 -->
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>AI Music Generation of Beethoven’s Piano Works</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                Following the project above and adding one more step, AI can generate some piano pieces in the style of Beethoven’s.
+                Check them out!
               </p>
               <ul class="work__list">
                 <li>HTML</li>
