--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
           <!-- Project2 -->
           <div class="work__box">
             <div class="work__text">
-              <h3>AI Music Generation of Beethoven’s Piano Works</h3>
+              <h3>AI Music Generation in the style of Beethoven’s</h3>
               <p>
-                Following the project above and adding one more step, AI can generate some piano pieces in the style of Beethoven’s.
+                Following the project above and using genetic algorithm, AI can generate some piano pieces in Beethoven’s style.
                 Check them out!
               </p>
 
