--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="work__text">
               <h3>AI Music Generation in the style of Beethoven’s</h3>
               <p>
-                Following the project above and using genetic algorithm, AI can generate some piano pieces in Beethoven’s style.
+                Following the project above and using genetic algorithm, AI can generate some piano pieces in Beethoven’s style.<br>
                 Check them out!
               </p>
 
