--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://yitingxia.medium.com/shape-of-you-acoustic-version-2b7b8f5dc386" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <!--<a href="#">
