--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
           <!-- Project2 -->
           <div class="work__box">
             <div class="work__text">
-              <h3>AI Music Generation in the style of Beethoven’s</h3>
+              <h3>AI Music Generation in the Style of Beethoven’s</h3>
               <p>
                 Following the project above and using genetic algorithm, AI can generate some piano pieces in Beethoven’s style.<br>
                 Check them out!
               </p>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
+                <a href="https://yitingxia.medium.com/ai-music-generation-in-the-style-of-beethovens-8b4d41d10544" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <!--<a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
